<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.EpiWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:theme="@style/Theme.EpiWidget.AppWidgetContainer">

    <FrameLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:paddingEnd="5dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/switch_panel_button"
            style="@style/Widget.EpiWidget.AppWidget.InnerView"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/epi_widget_switch_panel"
            android:textSize="12sp"
            android:background="@drawable/nav_ripple_effect"
            android:textStyle="bold" />

        <Button
            android:id="@+id/refresh_button"
            style="@style/Widget.EpiWidget.AppWidget.InnerView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|top"
            android:layout_margin="4dp"
            android:background="@drawable/refresh_ripple_effect"
            android:backgroundTint="@color/epi_theme_primary_text"/>

    </FrameLayout>

    <!-- EpiMouli -->
    <LinearLayout
        android:id="@+id/epimouli_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Hello World!"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- EpiDoor -->
    <LinearLayout
        android:id="@+id/epidoor_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enter_button"
                style="@style/Widget.EpiWidget.AppWidget.InnerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:visibility="visible"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/enter"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/foyer_button"
                style="@style/Widget.EpiWidget.AppWidget.InnerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_margin="4dp"
                android:visibility="visible"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/foyer"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/hub_button"
                style="@style/Widget.EpiWidget.AppWidget.InnerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:layout_margin="4dp"
                android:visibility="visible"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/hub"
                android:background="@drawable/ripple_effect"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <LinearLayout
                android:id="@+id/column1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sm1_button"
                    style="@style/Widget.EpiWidget.AppWidget.InnerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/sm1"
                    android:background="@drawable/ripple_effect"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/sm2_button"
                    style="@style/Widget.EpiWidget.AppWidget.InnerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/sm2"
                    android:background="@drawable/ripple_effect"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/column2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/meetup_button"
                    style="@style/Widget.EpiWidget.AppWidget.InnerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/meetup"
                    android:background="@drawable/ripple_effect"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/stream_button"
                    style="@style/Widget.EpiWidget.AppWidget.InnerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/stream"
                    android:background="@drawable/ripple_effect"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/column3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/incubateur_button"
                    style="@style/Widget.EpiWidget.AppWidget.InnerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/incubateur"
                    android:background="@drawable/ripple_effect"
                    tools:ignore="NestedWeights" />
                <Button
                    android:id="@+id/admissions_button"
                    style="@style/Widget.EpiWidget.AppWidget.InnerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/admissions"
                    android:background="@drawable/ripple_effect"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>